--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>News App</title>
   </head>
-  <body class="scrollbar-thin scrollbar-track-transparent scrollbar-thumb-black">
+  <body class="scrollbar scrollbar-track-transparent scrollbar-thumb-[#af695c]">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
